Move dotted line to avoid overlapping step box border

--- a/stylesheets/_component.progress-bars.scss
+++ b/stylesheets/_component.progress-bars.scss
@@ -61,7 +61,7 @@
         border-top: 2px dotted color(gray);
         content: '';
         display: block;
-        left: 100%;
+        left: 26px;
         position: absolute;
         top: 11px;
         width: 1000px;
